# watch-fit

./: README.md
apps/ble/: CMakeLists.txt  sdkconfig.old
apps/ble/main/: CMakeLists.txt  main.cpp
apps/ble/main/include/: common.h  gap.h
apps/esp-dif-test/: CMakeLists.txt
apps/esp-dif-test/main/: CMakeLists.txt  cpp_pthread.cpp
apps/esp-idf-test/: CMakeLists.txt
apps/minimal/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
apps/minimal/main/: CMakeLists.txt  main.cpp
interesting_repos/: README.md
